examples/errors/parsing/simple_refined-typo-Int.rcn
main : (x : int) [pure] =
  (42) : (x : int)
